# webaudioblog

./: .env  .gitignore  Cargo.toml  README.md  app.py  docker-compose.yml  requirements.txt  vercel.json
.github/workflows/: auto-deploy.yaml  deploy.yaml  docker->ECS.yaml
api/: Cargo.toml  Dockerfile  main.py
api/src/: main.rs  s3.rs
manifests/: hello-app-deployment.yaml  hello-app-development.yaml
old-api/: main.py
public/: index.html
src/: client.rs  main.rs
templates/: Dockerfile  index.html
