[package]
name = "s3_uploader" # Change this to your actual project name
version = "0.1.0"
edition = "2021"
resolver = "2"


# Dependencies
[dependencies]
actix-web = "4.0"
actix-multipart = "0.6.1"
actix-files = "0.6.0-beta.8" # For static file serving
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.27", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
# AWS SDK configurations
futures-util = "0.3"
aws-config = "1.2.0"
aws-sdk-s3 = "1.22.0"
futures = "0.3"
tokio-util = { version = "0.6", features = ["codec"] }
sanitize-filename = "0.3"  # Correct crate for filename sanitization
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false }

