[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.6.1"
reqwest = { version = "0.12.4", features = ["json"] }
serde_json = "1.0.116"
uuid = "1.8.0"
async-trait = "0.1.80"
tracing = "0.1.40"
aws-sdk-s3 = "1.24.0"
actix-web = "4.5.1"
actix-files = "0.6.5"
futures = "0.3.30"
regex = "1.10.4"
async-std = "1.12.0"
sanitize-filename = "0.5.0"
