[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.6.1"
reqwest = { version = "0.12.4", features = ["json"] }
serde_json = "1.0.116"
uuid = { version = "1.8.0", features = ["v4"] }
async-trait = "0.1.80"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", default-features = false }
aws-sdk-s3 = "1.24.0"
actix-files = "0.6.5"
futures = "0.3.30"
regex = "1.10.4"
async-std = "1.12.0"
sanitize-filename = "0.5.0"
aws-config = "1.2.1"
actix-web = "4.5.1"
futures-util = "0.3.30"
tokio = "1.37.0"
serde = { version = "1.0.199", features = ["derive"] }
actix-web-lab = "0.20.2"
dotenvy = "0.15.7"
tracing-actix-web = "0.7.10"

